--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://sahilvishwa2108:sahilvishwa2108@cluster0.q78ei.mongodb.net
+MONGODB_URI=mongodb+srv://sahilvishwa2108:<my-password>@cluster0.q78ei.mongodb.net
